# Opilora

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  index.html  install.ps1  package.json  project_structure.md  tailwind.config.js  test.ipynb
backend/: _test_api.py  _test_db.py  _test_ml.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analyze.py  collectors.py  dashboard.py  escalations.py  health.py  influencers.py  mentions.py  sentiments.py  topics.py
backend/app/collectors/: __init__.py  api_collector.py  base.py  rss_collector.py  twitter_mock_collector.py  upload_collector.py  web_scraper_collector.py
backend/app/core/: database.py  events.py  security.py
backend/app/ml/: aspect_model.py  config.py  emotion_model.py  pipeline.py  preprocessing.py  sentiment_model.py
backend/app/models/: __init__.py  base.py  collection_log.py  escalation.py  influencer.py  mention.py  sentiment.py  topic.py  user.py
backend/app/schemas/: __init__.py  collector.py  common.py  dashboard.py  escalation.py  influencer.py  mention.py  sentiment.py  topic.py
backend/app/services/: ingestion.py  scheduler.py
backend/app/utils/: migrate_mentions.py  seed_data.py
frontend/: package-lock.json
frontend/src/: App.tsx
src/config/: navigation.ts  routes.ts
src/hooks/: useDebounce.ts  useRealTimeData.ts  useSentimentAnalysis.ts
src/services/: api.ts  sentimentService.ts
src/store/: index.ts
src/styles/: animations.css  globals.css  variables.css
(+118 files in other folders)
